--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
         <version>3.4.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.tienda</groupId>
+    <groupId>com.example</groupId>
     <artifactId>tienda</artifactId>
-    <version>1</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>tienda</name>
     <description>its a tienda</description>
     <properties>
