--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>9.4.3</version>
+        </dependency>
     </dependencies>
     
     <build>
@@ -110,5 +115,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
